name:                wikisql-dataset
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/unfoldml/wikisql-dataset
license:             BSD3
license-file:        LICENSE
author:              Marco Zocca
maintainer:          Marco Zocca
copyright:           (C) 2022 UnfoldML, Marco Zocca
category:            Machine Learning, AI, Data, NLP
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 9.0.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     WikiSQL
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , conduit
                     , jsonl-conduit
                     , text

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , wikisql-dataset
                     , hspec

source-repository head
  type:     git
  location: https://github.com/unfoldml/wikisql-dataset
